📝 Report optimized cross-language benchmark results
Final campaign over the optimized Rust/Java/C# ports (3 invocations x 7
reps per cell, checksums intact): all three converge to 1.0-1.4
ns/number on the light generators; mersenne lands at 2.07 (Rust), 2.41
(Java), 3.21 (C#) from 4.79/4.88/6.44 before. README now documents each
optimization, what was rejected after measurement, and keeps the
straight-port and per-JS-runtime tables for reference.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Fh79ZcLzcebfjyccrNH5Z5